apt update before install.
Otherwise spurious errors can occur.

--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -41,7 +41,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Install dependencies
-      run: sudo apt -q install valgrind
+      run: |
+        sudo apt update
+        sudo apt -q install valgrind
     - name: configure
       run: |
         LDFLAGS="$CFLAGS" ./autogen.sh
