--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -2,4 +2,4 @@ man_MANS=lha.1
 EXTRA_DIST=$(man_MANS) html Doxyfile intro.h
 
 html:
-	doxygen
+	DOXYGEN_DOC_DIR=$(srcdir)/ doxygen $(srcdir)/Doxyfile
