Delete generated html files on clean

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -3,3 +3,6 @@ EXTRA_DIST=$(man_MANS) html Doxyfile intro.h
 
 html:
 	DOXYGEN_DOC_DIR=$(srcdir)/ doxygen $(srcdir)/Doxyfile
+
+clean-local:
+	rm -rf html
