Switch to pandoc for HTML manual generation
The style tweaks here are already used in several of my other projects:
wadptr; sdl-sopwith and WadGadget.

--- a/pkg/win32/GNUmakefile
+++ b/pkg/win32/GNUmakefile
@@ -1,6 +1,7 @@
 include ../config.make
 
 TOPLEVEL=../..
+PANDOC_FLAGS = -s --template=default.html5 -H ../style.html
 
 EXE_FILES=$(TOPLEVEL)/src/lha.exe
 
@@ -18,7 +19,8 @@ staging: $(EXE_FILES) $(patsubst %,$(TOPLEVEL)/%,$(DOC_FILES))
 	    cp $(TOPLEVEL)/$$f staging/$$f.txt;        \
 	    unix2dos staging/$$f.txt;                  \
 	done
-	groff -Thtml -mandoc $(TOPLEVEL)/doc/lha.1 > staging/lha.html
+	pandoc $(PANDOC_FLAGS) -f man $(TOPLEVEL)/doc/lha.1 \
+	       -o staging/lha.html
 
 clean:
 	rm -rf $(ZIP)
