Revert "Add new pandoc dependency to install list"
This reverts commit a482297488f9f78f840e9dbee0c9cce1e6829fda.
MSYS2 doesn't have this package yet.

--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -64,7 +64,7 @@ jobs:
       with:
         msystem: MINGW32
         update: true
-        install: base-devel git autoconf automake libtool groff zip dos2unix mingw-w64-i686-gcc pandoc
+        install: base-devel git autoconf automake libtool groff zip dos2unix mingw-w64-i686-gcc
     - uses: actions/checkout@v4
     - name: Find Git version
       id: version
@@ -101,7 +101,7 @@ jobs:
       with:
         msystem: MINGW64
         update: true
-        install: base-devel git autoconf automake libtool groff zip dos2unix mingw-w64-x86_64-gcc pandoc
+        install: base-devel git autoconf automake libtool groff zip dos2unix mingw-w64-x86_64-gcc
     - uses: actions/checkout@v4
     - name: Find Git version
       id: version
