Update webpage URL

--- a/rpm.spec.in
+++ b/rpm.spec.in
@@ -3,7 +3,7 @@ Summary: Free LZH archive tool
 Version: @VERSION@
 Release: 1
 Source: https://github.com/downloads/fragglet/@PACKAGE@/@PACKAGE@-@VERSION@.tar.gz
-URL: https://fragglet.github.io/lhasa/
+URL: https://lhasa.soulsphere.org/
 Group: Applications/Archiving
 BuildRoot: /var/tmp/@PACKAGE@-buildroot
 License: ISC license
