First implementation of search buffer structure
This will eventually be incorporated into the `-lh1-` encoder so that it
can do copies from history and fully implement the compression scheme
with a decent compression ratio. There is some test code in here that I
intend to move to a proper unit test.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -27,6 +27,7 @@ SRC =                                                   \
 	lha_writer.c                                    \
 	macbinary.c             macbinary.h             \
 	null_codec.c                                    \
+	search_buffer.c         search_buffer.h         \
 	lh1_common.c            lh1_common.h            \
 	lh1_decoder.c                                   \
 	lh5_decoder.c                                   \
