--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -5,7 +5,8 @@ LDADD=$(top_builddir)/lib/liblhasatest.a libtestframework.a
 COMPILED_TESTS=                       \
 	test-crc16                    \
 	test-basic-reader             \
-	test-decoder
+	test-decoder                  \
+	test-search-buffer
 
 UNCOMPILED_TESTS=                     \
 	test-decompress               \
