Move common test functions to `test_extract.sh`
This is the first step in a mini project to speed up the extract tests,
which take a long time to run. Factoring out to a separate file will
allow us to split test-extract into multiple separate scripts.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -21,6 +21,7 @@ EXTRA_DIST=                           \
 	compressed                    \
 	output                        \
 	test_common.sh                \
+	test_extract.sh               \
 	$(UNCOMPILED_TESTS)
 
 TESTS=$(COMPILED_TESTS) $(UNCOMPILED_TESTS)
