Split extract tests into multiple scripts
Since autotools can run tests in parallel now, let's make sure we can
make use of it. This splits the old test-extract script into eight
separate scripts (grouped roughly by OS). The tests complete a lot more
quickly now.

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -14,7 +14,14 @@ UNCOMPILED_TESTS=                     \
 	test-crc-output               \
 	test-print                    \
 	test-dry-run                  \
-	test-extract
+	test-extract-regression       \
+	test-extract-mac              \
+	test-extract-msdos            \
+	test-extract-os2              \
+	test-extract-unix             \
+	test-extract-windows          \
+	test-extract-misc1            \
+	test-extract-misc2
 
 EXTRA_DIST=                           \
 	archives                      \
