Name include directory based on package version
We were installing our headers into a directory named "liblhasa-1.0",
which is misleading since the project hasn't reached v1.0 yet! Worse, it
potentially complicates things in the future once we *do* reach v1.0...

--- a/lib/public/Makefile.am
+++ b/lib/public/Makefile.am
@@ -1,4 +1,4 @@
-headerfilesdir=$(includedir)/liblhasa-1.0
+headerfilesdir=$(includedir)/liblhasa-$(PACKAGE_VERSION)
 headerfiles_HEADERS=      \
    lhasa.h                \
    lha_decoder.h          \
