Set libtool versioning information for liblhasa
Until now we have always been building the library with the same
filename of `liblhasa.so.0.0.0`, which is the default if you do not
supply any version information. Since we now have at least some users
compiling against the library, we ought to be treating the versioning at
least a little bit more seriously.

The versioning information is supplied on build via the `-version-info`
command line option. The actual values to supply are a bit more arcane
and are not the same as the package version. The guide by flameeyes here
gives some useful rules of thumb:

<https://autotools.info/libtool/version.html>

> Always increase the revision value. Increase the current value
> whenever an interface has been added, removed or changed. Increase the
> age value only if the changes made to the ABI are backward compatible.

Since the v0.4.0 release we have made some ABI changes, but they should
be backwards compatible. Therefore, I've picked 1:1:1 as the initial
values to use for the library version. With this change, we now produce
a library named `liblhasa.so.0.1.1` which looks sensible: the major part
is unchanged (0) while the minor parts have increased.

--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,20 @@
 AC_INIT([Lhasa],[0.4.0],[fraggle@gmail.com],[lhasa])
 AC_CONFIG_AUX_DIR(autotools)
 
+# The version information below should be updated with each new release.
+#
+# From <https://autotools.info/libtool/version.html>:
+#
+# * Always increase the revision value.
+# * Increase the current value whenever an interface has been added,
+#   removed or changed.
+# * Increase the age value only if the changes made to the ABI are
+#   backward compatible.
+#
+LIBVER_CURRENT=1
+LIBVER_REVISION=1
+LIBVER_AGE=1
+
 AM_INIT_AUTOMAKE([no-define])
 LT_INIT
 
@@ -62,6 +76,9 @@ if [[ "$use_valgrind" = "true" ]]; then
 fi
 
 AM_CONDITIONAL(USE_VALGRIND, $use_valgrind)
+
+LT_LIBRARY_VERSION=$LIBVER_CURRENT:$LIBVER_REVISION:$LIBVER_AGE
+AC_SUBST(LT_LIBRARY_VERSION)
 
 # Save the default CFLAGS and clear them, so that the test build
 # of the library doesn't get the optimisation flags.
