Revise comments around library/libtool versioning
After reading the libtool documentation I understand a bit better how
this works and what these numbers mean. With this in mind I no longer
think the comments I copy/pasted are the best advice here. Instead,
replace them with a link to the libtool manual: I think the best advice
is to learn how the system is really supposed to work and what the
numbers are supposed to represent.

For the same reason, I've bumped LIBVER_REVISION back down to zero,
following the guidelines from the libtool manual:

> If any interfaces have been added, removed, or changed since the last
> update, increment current, and set revision to 0.

--- a/configure.ac
+++ b/configure.ac
@@ -2,17 +2,10 @@ AC_INIT([Lhasa],[0.4.0],[fraggle@gmail.com],[lhasa])
 AC_CONFIG_AUX_DIR(autotools)
 
 # The version information below should be updated with each new release.
-#
-# From <https://autotools.info/libtool/version.html>:
-#
-# * Always increase the revision value.
-# * Increase the current value whenever an interface has been added,
-#   removed or changed.
-# * Increase the age value only if the changes made to the ABI are
-#   backward compatible.
-#
+# See <https://www.gnu.org/software/libtool/manual/html_node/Versioning.html>
+# for documentation about how this works.
 LIBVER_CURRENT=1
-LIBVER_REVISION=1
+LIBVER_REVISION=0
 LIBVER_AGE=1
 
 AM_INIT_AUTOMAKE([no-define])
