Convert README, NEWS, COPYING to Markdown format
A little bit of modernization to make the Github project page appear
slightly nicer. We have to set the `foreign` argument to
`AM_INIT_AUTOMAKE` to keep it from complaining about the now "missing"
files.

--- a/configure.ac
+++ b/configure.ac
@@ -8,7 +8,8 @@ LIBVER_CURRENT=1
 LIBVER_REVISION=0
 LIBVER_AGE=1
 
-AM_INIT_AUTOMAKE([no-define])
+AM_INIT_AUTOMAKE([no-define foreign])
+
 LT_INIT
 
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
