--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,13 @@
 AUX_DIST_GEN = $(ac_aux_dir)
 
 ACLOCAL_AMFLAGS = -I m4
-EXTRA_DIST = $(AUX_DIST_GEN) gencov rpm.spec
+EXTRA_DIST = \
+	$(AUX_DIST_GEN) \
+	COPYING.md \
+	README.md \
+	NEWS.md \
+	gencov \
+	rpm.spec
 MAINTAINERCLEANFILES = $(AUX_DIST_GEN)
 
 pkgconfigdir = ${libdir}/pkgconfig
