--- a/pkg/config.make.in
+++ b/pkg/config.make.in
@@ -12,6 +12,6 @@ PACKAGE_VERSION = @PACKAGE_VERSION@
 
 # Documentation files to distribute with packages.
 
-DOC_FILES = README      \
-            COPYING     \
-            NEWS
+DOC_FILES = README.md   \
+            COPYING.md  \
+            NEWS.md
