--- a/.github/workflows/make.yml
+++ b/.github/workflows/make.yml
@@ -69,7 +69,13 @@ jobs:
     - name: Find Git version
       id: version
       run: |
-        export VERSION=$(git rev-parse --short HEAD)
+        if git describe --exact-match --tags >/dev/null; then
+          VERSION=$(git describe --exact-match --tags)
+          VERSION=${VERSION/#v/}
+        else
+          VERSION=$(git rev-parse --short HEAD)
+          VERSION=git-$VERSION
+        fi
         echo "VERSION=$VERSION-win32" >> $GITHUB_OUTPUT
 
     # TODO: --disable-shared is here because pkg/win32 doesn't package the dll..
@@ -106,7 +112,13 @@ jobs:
     - name: Find Git version
       id: version
       run: |
-        export VERSION=$(git rev-parse --short HEAD)
+        if git describe --exact-match --tags >/dev/null; then
+          VERSION=$(git describe --exact-match --tags)
+          VERSION=${VERSION/#v/}
+        else
+          VERSION=$(git rev-parse --short HEAD)
+          VERSION=git-$VERSION
+        fi
         echo "VERSION=$VERSION-win64" >> $GITHUB_OUTPUT
 
     # TODO: --disable-shared is here because pkg/win64 doesn't package the dll..
